--- a/frontend/src/app/pages/perfil-ocupacional/ocupacion/ocupacion.component.html
+++ b/frontend/src/app/pages/perfil-ocupacional/ocupacion/ocupacion.component.html
@@ -1,58 +1,80 @@
-<div class=" occupation">
+<div id="occupation" class="occupation container">
+    <div class=" ill order-md-3 order-1">
+        <ng-lottie class="lottie-il" [options]="options" (animationCreated)="animationCreated($event,0.2)">
+        </ng-lottie>
+
+    </div>
     <div class="row">
+        <div class="occupation-body col-12 col-md-10 offset-md-1  order-2 order-md-1  ">
+            <div class=" cta d-flex flex-row justify-content-center">
 
-        <div class="col-12 col-md-10 offset-md-1  order-2 order-md-1 ">
+                <h1 class="text-purple-orientate h3  center-align">{{title}}</h1>
+            </div>
 
+            <div class="d-flex   cta mt-5 order-3 order-md-2 mb-3">
+                <div class="cta">
 
+                    <button (click)="generatePdf()" nbButton shape="round" status="info"> PDF </button>
 
-            <swiper class="mySwiper" [config]="config" (swiper)="onSwiper($event)" (slideChange)="onSlideChange()">
-                <ng-template swiperSlide>
-                    <ngx-ocupation-info-card title="Personalidad" [data]="occupation"></ngx-ocupation-info-card>
-                </ng-template>
-                <ng-template swiperSlide>
-                    <ngx-ocupation-info-card title="Salida Ocupacional" [data]="occupation?.onet"></ngx-ocupation-info-card>
-                </ng-template>
-                <ng-template *ngIf="occupation?.skills.length>0" swiperSlide>
-                    <ngx-ocupation-info-card title="Habilidades" [data]="occupation?.skills"></ngx-ocupation-info-card>
-                </ng-template>
-                <ng-template *ngIf="occupation?.knowledges.length>0" swiperSlide>
-                    <ngx-ocupation-info-card title="Conocimientos" [data]="occupation?.knowledges"></ngx-ocupation-info-card>
-                </ng-template>
-                <ng-template *ngIf="occupation?.onet?.outputs.length>0" swiperSlide>
-                    <ngx-ocupation-info-card title="Oferta Académica" [data]="occupation?.onet?.outputs"></ngx-ocupation-info-card>
+                </div>
+                <div class="cta ml-2">
 
-                </ng-template>
-                <ng-template *ngIf="occupation?.qualifications.length>0" swiperSlide>
-                    <ngx-ocupation-info-card title="Cualificación" [data]="occupation?.qualifications"></ngx-ocupation-info-card>
+                    <button (click)="printComponent('content')" nbButton shape="round" status="info"> Imprimir </button>
 
-                </ng-template>
-                <ng-template *ngIf="occupation?.related.length>0" swiperSlide>
-                    <ngx-ocupation-info-card title="Afines" [data]="occupation?.related"></ngx-ocupation-info-card>
+                </div>
 
-                </ng-template>
+                <div *ngIf="user" class="cta  ml-2">
+                    <button (click)="sendmail()" nbButton shape="round" outline status="info"> ENVIAR CORREO </button>
 
-            </swiper>
+                </div>
+            </div>
 
+            <div class="occupation-swiper-mobile ">
 
-        </div>
-        <!--
-        <div class="col-12 col-md-10 offset-md-1  cta mt-5 align-center order-3 order-md-2">
-            <div class="cta">
+                <swiper class="mySwiper " [config]="config" (swiper)="onSwiper($event)" (slideChange)="onSlideChange()">
+                    <ng-template swiperSlide>
+                        <ngx-ocupation-info-card title="Personalidad" [data]="occupation"></ngx-ocupation-info-card>
+                    </ng-template>
+                    <ng-template swiperSlide>
+                        <ngx-ocupation-info-card title="Salida Ocupacional" [data]="occupation?.onet"></ngx-ocupation-info-card>
+                    </ng-template>
+                    <ng-template *ngIf="occupation?.skills.length>0" swiperSlide>
+                        <ngx-ocupation-info-card title="Habilidades" [data]="occupation?.skills"></ngx-ocupation-info-card>
+                    </ng-template>
+                    <ng-template *ngIf="occupation?.knowledges.length>0" swiperSlide>
+                        <ngx-ocupation-info-card title="Conocimientos" [data]="occupation?.knowledges"></ngx-ocupation-info-card>
+                    </ng-template>
+                    <!--<ng-template *ngIf="occupation?.onet?.outputs.length>0" swiperSlide>
+                      <ngx-ocupation-info-card title="Oferta Académica" [data]="occupation?.onet?.outputs"></ngx-ocupation-info-card>
 
-                <button routerLink="/auth/register" nbButton shape="round" status="info"> IMPRIMIR </button>
-                <button routerLink="/auth/login" class="ml-4" nbButton shape="round" status="info"> PDF </button>
+                  </ng-template>
+                 -->
+                    <ng-template *ngIf="occupation?.qualifications.length>0" swiperSlide>
+                        <ngx-ocupation-info-card showFooter="true" title="Cualificación" [data]="occupation?.qualifications"></ngx-ocupation-info-card>
+
+                    </ng-template>
+                    <ng-template *ngIf="occupation?.related.length>0" swiperSlide>
+                        <ngx-ocupation-info-card title="Afines" [data]="occupation?.related"></ngx-ocupation-info-card>
+
+                    </ng-template>
+
+                    <!-- <ng-template *ngIf="occupation?.market.men" swiperSlide>
+                        <ngx-high-chart [labels]="['Hombres', 'Mujeres']" [datasets]="[occupation?.market.men,occupation?.market.women]" [title]="'Mercado Laboral'"></ngx-high-chart>
+                    </ng-template>
+                    <ng-template *ngIf="occupation?.market?.rural" swiperSlide>
+                        <ngx-high-chart [labels]="['Urbano', 'Rural']" [datasets]="[occupation?.market.urban,occupation?.market.rural]" [title]="'Mercado Laboral'"></ngx-high-chart>
+
+                    </ng-template>-->
+
+                    <ng-template *ngIf="occupation?.market?.youth" swiperSlide>
+                        <ngx-mercado-laboral title="Mercado Laboral" [market]="occupation?.market"></ngx-mercado-laboral>
+                    </ng-template>
+                </swiper>
             </div>
 
 
-            <div class="cta mt-3">
-                <button routerLink="/auth/login" nbButton shape="round" outline status="info"> ENVIAR CORREO </button>
-
-            </div>
-        </div>-->
-        <div class=" ill order-md-3 order-1">
-            <ng-lottie [options]="options" (animationCreated)="animationCreated($event,0.2)">
-            </ng-lottie>
-
         </div>
+
+
     </div>
 </div>
