--- a/frontend/src/app/@shared/pdf-templates/obs-map/obs-map.component.html
+++ b/frontend/src/app/@shared/pdf-templates/obs-map/obs-map.component.html
@@ -9,7 +9,7 @@
 
 <main class="container mt-5">
     <div class="d-flex flex-column justify-content-center">
-        <h2 class="text-center align-self-center mb-2"> Observatorio del Río Magdalena</h2>
+        <h2 class="text-center align-self-center mb-2"> Observatorio </h2>
         <h4 class="text-center align-self-center mb-2"> Universidad del norte</h4>
 
         <h6 class="text-center align-self-center mb-4">Fecha del reporte:
@@ -29,6 +29,6 @@
 
 </main>
 <footer>
-    Observatorio del Río Magdalena - Universidad del Norte Copyright &copy;
+    Observatorio - Universidad del Norte Copyright &copy;
     <p [innerHTML]="getDate()"></p>
 </footer>
