--- a/frontend/src/app/pages/perfil-ocupacional/ocupacion/ocupacion.component.html
+++ b/frontend/src/app/pages/perfil-ocupacional/ocupacion/ocupacion.component.html
@@ -11,19 +11,14 @@
                 <h1 class="text-purple-orientate h3  center-align">{{title}}</h1>
             </div>
 
-            <div class="d-flex   cta mt-5 order-3 order-md-2 mb-3">
-                <div class="cta">
+            <div class=" d-flex cta mt-5 order-3 order-md-2 mb-3">
+                <!-- <div class="cta  ">
 
-                    <button (click)="generatePdf()" nbButton shape="round" status="info"> PDF </button>
+                    <button (click)="generatePdf()" nbButton shape="round" status="info">Descargar PDF </button>
 
-                </div>
-                <div class="cta ml-2">
+                </div>-->
 
-                    <button (click)="printComponent('content')" nbButton shape="round" status="info"> Imprimir </button>
-
-                </div>
-
-                <div *ngIf="user" class="cta  ml-2">
+                <div *ngIf="user" class="cta  ml-2  ">
                     <button (click)="sendmail()" nbButton shape="round" outline status="info"> ENVIAR CORREO </button>
 
                 </div>
