--- a/frontend/src/app/pages/perfil-ocupacional/area-card/area-card.component.scss
+++ b/frontend/src/app/pages/perfil-ocupacional/area-card/area-card.component.scss
@@ -14,6 +14,9 @@
         line-height: 300px;
     }
     .area-card {
+        .btn-area {
+            width: 90%;
+        }
         border-radius: 35px;
         border-width: 9px;
         border: 3px solid #414141;
