--- a/frontend/src/app/pages/admin/chart-pivot-table/chart-pivot-table.component.html
+++ b/frontend/src/app/pages/admin/chart-pivot-table/chart-pivot-table.component.html
@@ -2,11 +2,11 @@
     <div class="col-sm-6">
         <nb-card class="  shadow-sm">
             <nb-card-header>
-                Tabla
+                Tabla Dinámica
             </nb-card-header>
             <nb-card-body style="    padding: 0;
             margin: 0;">
-                <app-wbr-pivot #pivot1 (beforetoolbarcreated)="customizeToolbar($event)" [toolbar]="true" [width]="'100%'" [height]="500" [customizeCell]="onCustomizeCell" (ready)="onPivotReady($event)" (reportcomplete)="onReportComplete()" [global]="{localization:'https://drive.google.com/u/1/uc?id=1NVjvurenDPrYeI1MGfDEE25BLy-IZlnY&export=download'}">
+                <app-wbr-pivot #pivot1 (beforetoolbarcreated)="customizeToolbar($event)" [toolbar]="false" [width]="'100%'" [height]="500" [customizeCell]="onCustomizeCell" (ready)="onPivotReady($event)" (reportcomplete)="onReportComplete()" [global]="{localization:'https://drive.google.com/u/1/uc?id=1NVjvurenDPrYeI1MGfDEE25BLy-IZlnY&export=download'}">
                     WebDataRocks will appear here
                 </app-wbr-pivot>
 
